Changes in design, added panels, slideshow page in the works

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
 
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
   <title>Sam-Aripov's Protfolio!</title>
 
   <style>
@@ -22,6 +21,7 @@
     /* width */
     ::-webkit-scrollbar {
       width: 10px;
+      height: 10px;
     }
 
     /* Track */
