--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  
   <title>Sam-Aripov's Protfolio!</title>
 
   <style>
@@ -39,7 +44,6 @@
     ::-webkit-scrollbar-thumb:hover {
       background: rgb(6, 137, 155);
     }
-
   </style>
 
 </head>
